Corrected Search result page layout - fixed product names overflow - set default page size to 12 to fit 4 products per line - added link titles

--- a/source/ApotekaShop.Web/Content/site.css
+++ b/source/ApotekaShop.Web/Content/site.css
@@ -69,6 +69,11 @@ margin: 30px 10px;
     right: 3px;
 }
 
+.text-hidden-overflow {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
 
 body {
     padding-top: 90px;
